--- a/.github/workflows/Selenium-Action_Template.yaml
+++ b/.github/workflows/Selenium-Action_Template.yaml
@@ -2,7 +2,7 @@ name: Run Selenium On GitHub Action
 on:
   schedule:
 
-    - cron: '* * * * *' # Runs every 1 m
+    - cron: '*/6 * * * *' # Runs every 1 m
   workflow_dispatch:
 jobs:
   scrape:
